# Another-Little-RISC-V-ISA-Simulator

./: CMakeLists.txt  README.md
dtb/: ALISS.dts
include/: ALISS.h  main.h
pattern/: test.elf
regression_env/: run_aliss.py  rv64i.pl
src/: main.cxx  test_main.cxx
